# todo-server

todo-server/: Dockerfile  compose.yml  pyproject.toml
todo-server/app/: main.py
todo-server/tests/: test_main.py
